HelloUltraviolet/Fixtures/RejectedSource/Patterns/RangePatternsDiagnostic/Expected.uv
//! Expected diagnostic metadata for the RangePatternsDiagnostic rejected-source specimen.

expectedDiagnostic("E-SEM-2722", "diag.17.RangePatterns")
